--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 
 
-
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="./public/js/app.js"></script>
 </body>
 
