--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
 
             <div class="leftside-menu">
-                <h1>Yuumy</h1>
+                <h1>Yummy</h1>
                 <div class="point">.</div>
             </div>
             <input id="Check" type="checkbox" class="Check">
@@ -70,11 +70,12 @@
         <section class="restaurant-Home" id="restaurant-Home">
             <div class="left">
                 <div class="leftside">
-                    <h1>Enjoy Your Healthy Delicious Food</h1>
-                    <p>We are team of talented designers making websites with Bootstrap</p>
+                    <h1>ENJoY YOUR HEALTHY <br>DELICIOUS FOOD</h1>
+                    <p>We are team of talented designers making <br> websites with Bootstrap</p>
                 </div>
-                <div> <button href="#bookatable">book a table</button>
-                    <button class="btn">Watch a video</button>
+                <div class="liens"> 
+                    <a href="#bookatable"><button >book a table</button></a>
+                    <a href="#bookatable"><p><i class="bi bi-play-circle-fill"></i>Watch a video</p></a>
                 </div>
 
             </div>
@@ -84,7 +85,8 @@
             <p>about us</p>
             <h1>Learn More <span>About Us</span></h1>
             <div class="globale">
-                <div><img width="550px" src="./public/images/about.jpg" alt="">
+                <div class="mini-section">
+                    <img width="550px" src="./public/images/about.jpg" alt="">
                     <div class="sous-img">
                         <p>book a table</p>
                         <span>+1 5589 55488 55</span>
@@ -98,25 +100,48 @@
                     </div>
                     <div class="rightside-icon ">
                         <i class="bi bi-check2-all"></i>
-                        <p>Ullamco laboris nisi ut aliquip ex ea co mmodo consequat.</p>
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit.</p>
                     </div>
                     <div class="rightside-icon ">
                         <i class="bi bi-check2-all"></i>
-                        <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.
                             .</p>
                     </div>
                     <p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
-                    <div class="leftside"><video width="400" src="./public/video/1. Présentation détaillée de la formation.mp4"
+                    <div class="leftside"><video width="400" src="https://youtu.be/Y7f98aduVJ8"
                         controls poster="./public/images/about-2.jpg"></video></div>
                 </div>
             </div>
 
         </section>
+        <section class="whychooseymmy">
+            <div class="card" id="card1">
+                <h1>Why Choose Yummy</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.</p>
+                <a href="#restaurant-Home"><button>Learn more</button></a>
+
+            </div>
+            <div class="card">
+               <div><i class="bi bi-journal-text"></i></div> 
+                <h4>Corporis voluptates officia eiusmod</h4>
+                <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+            </div>
+            <div class="card">
+                <div><i class="bi bi-gem"></i></div>
+                <h4>Ullamco laboris ladore lore pan</h4>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+            </div>
+            <div class="card">
+                <div><i class="bi bi-archive-fill"></i></div>
+                <h4>Labore consequatur incidid dolore</h4>
+                <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+            </div>
+        </section>
+        <section></section>
     </main>
 
 
 
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="./public/js/app.js"></script>
 </body>
 
