--- a/index.html
+++ b/index.html
@@ -358,54 +358,7 @@
                 <button carouselBtn="carousel2" class="next">Next</button>
             </div>
         </section>
-        <section class="carousel-globale1">
-
-            <div id="carousel1" autoslide="on" class="carousel-container">
-
-                <div class="carousel">
-                 
-                    <div class="slide img12">
-                        <p>custom partties</p>
-                        <h2>$289</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur incidunt quia
-                            architecto aperiam temporibus maiores exercitationem. Aut minima accusantium, tempore
-                            inventore dolorum, facere quisquam, ducimus natus quidem odio doloribus.</p>
-                    </div>
-
-                    <div class="slide img2">
-                        <p>custom partties</p>
-                        <h2>$289</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur incidunt quia
-                            architecto aperiam temporibus maiores exercitationem. Aut minima accusantium, tempore
-                            inventore dolorum, facere quisquam, ducimus natus quidem odio doloribus.</p>
-                    </div>
-
-                    <div class="slide img3">
-                        <p>custom partties</p>
-                        <h2>$289</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur incidunt quia
-                            architecto aperiam temporibus maiores exercitationem. Aut minima accusantium, tempore
-                            inventore dolorum, facere quisquam, ducimus natus quidem odio doloribus.</p>
-                    </div>
-
-                    <div class="slide img4">
-                        <p>custom partties</p>
-                        <h2>$289</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur incidunt quia
-                            architecto aperiam temporibus maiores exercitationem. Aut minima accusantium, tempore
-                            inventore dolorum, facere quisquam, ducimus natus quidem odio doloribus.</p>
-                    </div>
-                </div>
-
-                <button carouselBtn="carousel1" class="previous">Previous</button>
-                <button carouselBtn="carousel1" class="next">Next</button>
-
-
-
-
-            </div>
-
-        </section>
+       
         <section id="restaurant-chefs" class="restaurant-chefs">
             <h1>Our Proffesional <span> chefs</span></h1>
 
@@ -529,7 +482,7 @@
                 <div
                     class="contact-para d-flex flex-column gap-2 justify-content-center align-items-center  text-center ">
                     <p class="title">Contact</p>
-                    <h2>Need Help ? <span class="text-colorTxt text-danger">ContactUs</span> </h2>
+                    <h2 class="font">Need Help ? <span class="text-colorTxt text-danger ">ContactUs</span> </h2>
 
                 </div>
                 <a href="" class="text-center pt-5"><iframe
