--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#restaurant-gallery">Gallery</a>
                 <a href="#">Drop Down</a>
                 <a href="#restaurant-contact">Contact</a>
-                <i class="bi bi-x-lg close "></i>
+                <i class="bi bi-x-lg close-menu "></i>
 
             </div>
 
@@ -41,7 +41,7 @@
 
             <div id="Modal" class="modal">
                 <div class="modal-content">
-                    <div class="close">&times;</div>
+                    <div class="close1">&times;</div>
                     <h2>Login</h2>
                     <form>
                         <label for="usrname"> Username</label>
